# serializer version: 1
# name: test_picture_crop_to_fit
  '''
  <p:pic xmlns:p="http://schemas.openxmlformats.org/presentationml/2006/main" xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main">
    <p:blipFill>
      <a:srcRect t="16667" b="16667"/>
    </p:blipFill>
  </p:pic>
  
  '''
# ---
# name: test_picture_get_or_add_ln
  '''
  <p:pic xmlns:p="http://schemas.openxmlformats.org/presentationml/2006/main" xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main">
    <p:spPr>
      <a:ln/>
    </p:spPr>
  </p:pic>
  
  '''
# ---
# name: test_picture_new_ph_pic
  '''
  <p:pic xmlns:p="http://schemas.openxmlformats.org/presentationml/2006/main" xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships">
    <p:nvPicPr>
      <p:cNvPr id="9" name="Picture 8" descr="kittens.jpg"/>
      <p:cNvPicPr>
        <a:picLocks noGrp="1" noChangeAspect="1"/>
      </p:cNvPicPr>
      <p:nvPr/>
    </p:nvPicPr>
    <p:blipFill>
      <a:blip r:embed="rId42"/>
      <a:stretch>
        <a:fillRect/>
      </a:stretch>
    </p:blipFill>
    <p:spPr/>
  </p:pic>
  
  '''
# ---
# name: test_picture_new_pic
  '''
  <p:pic xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:p="http://schemas.openxmlformats.org/presentationml/2006/main" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships">
    <p:nvPicPr>
      <p:cNvPr id="9" name="Picture 8" descr="kittens.jpg"/>
      <p:cNvPicPr>
        <a:picLocks noChangeAspect="1"/>
      </p:cNvPicPr>
      <p:nvPr/>
    </p:nvPicPr>
    <p:blipFill>
      <a:blip r:embed="rId42"/>
      <a:stretch>
        <a:fillRect/>
      </a:stretch>
    </p:blipFill>
    <p:spPr>
      <a:xfrm>
        <a:off x="1" y="2"/>
        <a:ext cx="3" cy="4"/>
      </a:xfrm>
      <a:prstGeom prst="rect">
        <a:avLst/>
      </a:prstGeom>
    </p:spPr>
  </p:pic>
  
  '''
# ---
# name: test_picture_new_video_pic
  '''
  <p:pic xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:p="http://schemas.openxmlformats.org/presentationml/2006/main" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships">
    <p:nvPicPr>
      <p:cNvPr id="42" name="Media 41">
        <a:hlinkClick r:id="" action="ppaction://media"/>
      </p:cNvPr>
      <p:cNvPicPr>
        <a:picLocks noChangeAspect="1"/>
      </p:cNvPicPr>
      <p:nvPr>
        <a:videoFile r:link="rId1"/>
        <p:extLst>
          <p:ext uri="{DAA4B4D4-6D71-4841-9C94-3DE7FCFB9230}">
            <p14:media xmlns:p14="http://schemas.microsoft.com/office/powerpoint/2010/main" r:embed="rId2"/>
          </p:ext>
        </p:extLst>
      </p:nvPr>
    </p:nvPicPr>
    <p:blipFill>
      <a:blip r:embed="rId3"/>
      <a:stretch>
        <a:fillRect/>
      </a:stretch>
    </p:blipFill>
    <p:spPr>
      <a:xfrm>
        <a:off x="1" y="2"/>
        <a:ext cx="3" cy="4"/>
      </a:xfrm>
      <a:prstGeom prst="rect">
        <a:avLst/>
      </a:prstGeom>
    </p:spPr>
  </p:pic>
  
  '''
# ---
